<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/test_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:text="上传头像" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/id_et_sign_up_second_step_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pleaseInputVerifyCode"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/id_btn_sign_up_second_step_get_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_verify_code_again" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入用户名" />


    <RadioGroup
        android:id="@+id/group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="男生" />

        <RadioButton
            android:id="@+id/rbtn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女生" />

    </RadioGroup>


    <Button
        android:id="@+id/id_btn_sign_up_second_step_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_pay_button_green"
        android:text="@string/done" />

</LinearLayout>
