<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/edit_account_number"
                style="@style/App.EditText"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:maxLength="11" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/pleaseInputVerifyCode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <Button
                    android:id="@+id/btn_get_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_verify_code" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_password"
                style="@style/App.EditText"

                android:layout_marginTop="16dp"
                android:hint="请输入新密码"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:text="重置密码" />


        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_reset_password_by_email"
        android:layout_width="wrap_content"
        android:layout_height="56dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="使用注册邮箱重置密码" />

</LinearLayout>